# CMakeManual

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ServerDemo  cmake_install.cmake  server.cpp
CMakeLanguage/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
CMakeTest/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
CMakeTools/: CMakeLists.txt  CMakeToos.cpp
CPackDemo/: CMakeLists.txt
CPackDemo/app/: CMakeLists.txt
CPackDemo/math_lib/: CMakeLists.txt
CPackDemo/math_lib/src/: add.cpp
CTestDemo/: CMakeLists.txt  main.cpp
InstallSharedLib/: CMakeLists.txt
InstallSharedLib/MyLib/: CMakeLists.txt
InstallSharedLib/MyLib/src/: add.cpp
InstallStaticLib/: CMakeLists.txt
InstallStaticLib/MyLib/: CMakeLists.txt
InstallStaticLib/MyLib/src/: sub.cpp
JsonCppDemo/: CMakeLists.txt  main.cpp
ReleaseDemo/: CMakeLists.txt  main.cpp
SetTargetProperties/: CMakeLists.txt
SetTargetProperties/src/: CMakeLists.txt
SharedLibDemo/: CMakeLists.txt
SharedLibDemo/math_lib/: CMakeLists.txt
SharedLibDemo/math_lib/src/: sub.cpp
StaticLibDemo/: CMakeLists.txt
StaticLibDemo/app/: CMakeLists.txt  main.cpp
StaticLibDemo/math_lib/: CMakeLists.txt
TargetLinkLibrarys/: CMakeLists.txt
TargetLinkLibrarys/src/: CMakeLists.txt
TestInclude/: CMakeLists.txt
TestInclude/sub/: CMakeLists.txt  sub.cmake
UseStaticLib/: CMakeLists.txt  main.cpp
